--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "recharts": "^2.15.3",
+    "rollup-plugin-html": "^0.2.1",
     "tailwindcss": "^4.1.5"
   },
   "devDependencies": {
@@ -31,7 +32,6 @@
     "globals": "^16.0.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
-    "vite": "^6.3.5",
-    "vite-plugin-singlefile": "^1.0.0"
+    "vite": "^6.3.5"
   }
 }
