--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "tsc -b && vite build && mv dist/index.html dist/$(date +%Y%m%d%H%M%S).html",
     "lint": "eslint .",
     "preview": "vite preview",
-    "pack": "vite build --config vite.config.ts --mode production"
+    "pack": "vite build --config vite.config.ts --mode production && mv dist/index.html dist/$(date +%Y%m%d%H%M%S).html"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.5",
